# domashka_kurs

./: .flake8  .gitignore  README.md  mylog.txt  pyproject.toml
docs/: README.md
src/: __init__.py  bank_operations.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  widget.py
src/utils/: csv_excel_data_extractor.py  json_data_extractor.py  simple_calculator.py
tests/: __init__.py  conftest.py  test_csv_excel_data_extractor.py  test_decorators.py  test_demo.py  test_external_api.py  test_generators.py  test_json_data_extractor.py  test_main.py  test_masks.py  test_processing.py  test_results.txt  test_simple_calculator.py  test_widget.py  tests_demo.py  tests_masks.py
utils/: json_data_extractor.py
